<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartBeBe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_string">Default</string>
    <string name="default_long_string">While North Korean athletes are in the South to promote cooperation through sportsmanship, a group of South Korean activists launched balloons carrying anti-Pyongyang leaflets across the border Sunday, in the face of warnings of retaliation from the North.
About 10 members of the Fighters for Free North Korea released 10 large helium-filled balloons carrying 200,000 anti-North Korea leaflets into the North from a site in Paju, north of Seoul, according to footage shown on Seoul’s local television stations.Once the North’s main tool for southbound “psychological warfare” campaigns, balloons carrying leaflets with information about the outside world and basic goods have often been used by South Korean activists and defectors from the North. It’s an effective weapon, and the one that irks Pyongyang most.
In response, the DPRK, the abbreviation for North Korea’s official name, the Democratic People’s Republic of Korea, routinely threatens to attack the launch sites. But last week Pyongyang ramped up pressure on Seoul to stop activists from floating propaganda leaflets, claiming that such activity was tantamount to “a graver provocation than military force.”</string>
    
    <string name="sample_name">추사랑</string>
    
    
    <string name="diary_write_title">글쓰기</string>
    <string name="diary_write_title_excp">제목을 입력해 주세요</string>
    <string name="diary_write_day_excp">날짜를 입력해 주세요</string>
    <string name="diary_write_content_excp">내용을 입력해 주세요</string>
    <string name="diary_write_cancel_warning">입력한 내용이 사라집니다.</string>
    
    
    <string name="policyDetail_intro_text">사업소개</string>
    <string name="policyDetail_time_text">적용시점</string>
    <string name="policyDetail_target_text">지원대상</string>
    <string name="policyDetail_content_text">지원내용</string>
    <string name="policyDetail_amount_text">지원금액</string>
    <string name="policyDetail_request_text">신청방법</string>
    <string name="policyDetail_step_text">이용절차</string>
    <string name="policyDetail_document_text">제출서류</string>
    <string name="policyDetail_standard_text">기준</string>
    
    
    <string name="vaccineDetail_name_text">백신이름</string>  
    <string name="vaccineDetail_time_text">접종시기</string>
    <string name="vaccineDetail_content_text">상세 설명</string>  
    <string name="vaccineDetail_channel_text">전파 경로</string>
    <string name="vaccineDetail_sympton_text">증상</string> 
    <string name="vaccineDetail_cure_text">치료 방법</string>
    <string name="vaccineDetail_prevention_text">예방 방법</string>
    
    
    <string name="signup_name">이름</string>
    <string name="signup_age">생일</string>
    <string name="signup_gender">성별</string>
    <string name="signup_height">키</string>
    <string name="signup_weight">몸무게</string>
    <string name="gender_female">여자</string>
    <string name="gender_male">남자</string>

    
    
    <string name="policy_group1">보육/교육/양육</string>
    <string name="policy_group2">영유아 건강</string>
    <string name="policy_group3">육아</string>
    
    
    
    <string name="menu_diary">다이어리</string>
    <string name="menu_vaccine">예방접종</string>
    <string name="menu_babyfood">이유식</string>
    <string name="menu_growth">성장 단계</string>
    <string name="menu_policy">육아 정책</string>
    <string name="menu_culture">문화 센터</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_setting">환경설정</string>
    <string name="menu_baby_add">아이등록</string>
    
    
    <string name="diary_view_string">다이어리 보기</string>
    <string name="calendar_view_string">달력 보기</string>
    
    
    <string name="btn_text_ok">확인</string>
    <string name="btn_text_complete">완료</string>
    <string name="btn_text_more">추가등록</string>
    <string name="btn_text_cancel">취소</string>
    <string name="btn_text_close">닫기</string>
    <string name="btn_text_calendar">캘린더</string>
    
    
    <string name="hint_subject">제목을 입력하세요</string>
    <string name="hint_content">내용을 입력하세요</string>
    <string name="hint_day">날 짜</string>
    
    
    <string name="day_sun">일</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wen">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>
    
    
    <string name="write_day_sun">(일)</string>
    <string name="write_day_mon">(월)</string>
    <string name="write_day_tue">(화)</string>
    <string name="write_day_wen">(수)</string>
    <string name="write_day_thu">(목)</string>
    <string name="write_day_fri">(금)</string>
    <string name="write_day_sat">(토)</string>
    
    
    <string name="left_button">◀</string>
    <string name="right_button">▶</string>
    <string name="shoot_btn">shoot</string>
    <string name="tall_btn">tall</string>
    <string name="weight_btn">weight</string>
    
    
    <string name="baby_remove_menu_text">아이 정보 삭제</string>
</resources>
