<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
   
  	 <LinearLayout
  	     android:layout_height="wrap_content"
  	     android:layout_width="match_parent"
  	     android:orientation="horizontal">
  	     
		<Button
			android:id="@+id/prev"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:layout_weight="3"
			android:background="@null"
			android:text="@string/left_button"/>
	  	
  	    	 
	  	 <TextView
     	    android:id="@+id/maintext" 
	        android:layout_height="wrap_content"
	  	    android:layout_width="match_parent"
	  	    android:layout_weight="1"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
	  	    android:gravity="center"
	  	    android:textColor="#000000"
	  	    android:text="0000-00"/>
	  	 	
	     
		<Button
			android:id="@+id/next"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:layout_weight="3"
			android:background="@null"
			android:text="@string/right_button"/> 
  	 </LinearLayout>
  	     
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sun"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_mon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_fri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sat"
            android:textColor="#0100FF" />
    </LinearLayout>

    <GridView
        android:id="@+id/calGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7" />

</LinearLayout>
