<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
 
   	<RelativeLayout 
   	    android:id="@+id/title_relative"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_gravity="center_vertical"
       	android:background="#FFA7A7"
       	android:padding="5dip" >
   	
   		<Button
   	    	android:id="@+id/diary_write_cancel_btn"
   	    	android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/btn_text_cancel"
			android:textColor="#ffffff"
			android:textSize="16sp"
			android:padding="10dip"
			android:background="@null"/>
   		<TextView
   		    android:id="@+id/diary_write_title_textView"
   	    	android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textColor="#ffffff"
			android:textSize="20sp"
			android:text="@string/app_name"/>
   		
   		<Button
   	    	android:id="@+id/diary_write_complete_btn"
   	    	android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:text="@string/btn_text_complete"
			android:textColor="#ffffff"
			android:textSize="16sp"
			android:padding="10dip"
			android:background="@null"/>
   		
   	</RelativeLayout>
   	
   	
   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical" >
   		
	    <EditText 
	        android:id="@+id/diary_write_title_editText"
	        android:hint="@string/hint_subject"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:background="@null"
	        android:singleLine="true"/>
    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#CCCCCC"/>	    
	     
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
		    <EditText
		        android:id="@+id/diary_write_day_editText"
		        android:hint="@string/hint_day"
		        android:enabled="false"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:padding="10dip"
		        android:background="@null"
		        android:layout_weight="9"/>
	    
		    <ImageButton
		        android:id="@+id/diary_write_viewCalendar_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:layout_gravity="right"
		        android:src="@drawable/diary_calendar_btn_128x128"
		        android:background="@null"/>
		    	   
	    </LinearLayout>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#CCCCCC"/>
	    
        <EditText
            android:id="@+id/diary_write_content_editText"
            android:lines="9"
            android:hint="@string/hint_content"
            android:padding ="10dip"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:textColor="#000000" />
        
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#CCCCCC" />	   
	     
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:padding="10dip"
	        android:orientation="horizontal">
		    
	        <ImageButton
	            android:id="@+id/diary_write_location_btn" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dip"
	            android:src="@drawable/diary_location_normal_128x128"
	            android:background="@null" />
	        
	        <ImageButton
	            android:id="@+id/diary_write_vaccine_btn" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dip"
	            android:src="@drawable/diary_vaccine_normal_128x128"
	            android:background="@null" />
	        
	        <ImageButton
	            android:id="@+id/diary_write_height_btn" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dip"
	            android:src="@drawable/diary_height_normal_128x128"
	            android:background="@null" />
	        
	        <ImageButton
	            android:id="@+id/diary_write_weight_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/diary_weight_normal_128x128"
	            android:background="@null" />
	        
	    </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
